[tool.poetry]
name = "apollo"
version = "0.1.0"
description = "Python-like programming language. In Greek mythology Apollo is the slayer of Python ðŸ"
authors = ["Chady Kamar"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
