[tool.poetry]
name = "apollo"
version = "0.1.0"
description = "Python-like programming language written in CPython 3.10"
authors = ["Chady Kamar <chadykamar@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"
pylint = "^2.12.2"
pytest = "^6.2.5"
coverage = "^6.2"
black = "^21.12b0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
